--- a/style.css
+++ b/style.css
@@ -7,8 +7,7 @@
 .header{
     min-height: 100vh;
     width: 100%;
-    background-image: url(img/banner.png);
-    opacity: 0.8;
+    background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)), url(img/banner.png);
     background-position: center;
     background-size: cover;
     position: relative;
@@ -232,6 +231,7 @@ nav .fa{
 
 .facilities-col p{
     padding: 0;
+    text-align: justify;
 }
 
 .facilities-col h3{
@@ -267,6 +267,7 @@ nav .fa{
 
 .testimonials-col p{
     padding: 0;
+    text-align: justify;
 }
 
 .testimonials-col h3{
@@ -282,7 +283,7 @@ nav .fa{
 .cta{
     margin: 100px auto;
     width: 80%;
-    background-image: url(img/banner2.jpg);
+    background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)), url(img/banner2.jpg);
     background-position: center;
     background-size: cover;
     border-radius: 10px;
@@ -320,6 +321,177 @@ nav .fa{
     color: #f44336;
 }
 
+/* ----- about us page ----- */
+
+.sub-header{
+    height: 40vh;
+    width: 100%;
+    background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)), url(img/background.jpg);
+    background-position: center;
+    background-size: cover;
+    text-align: center;
+    color: #fff;
+}
+
+.sub-header h1{
+    margin-top: 100px;
+}
+
+.about-us{
+    width: 80%;
+    margin: auto;
+    padding-top: 80px;
+    padding-bottom: 50px;
+}
+
+.about-col{
+    flex-basis: 48%;
+    padding: 30px 20px;
+}
+
+.about-col img{
+    width: 100%;
+}
+
+.about-col h1{
+    padding-top: 0;
+}
+
+.about-col p{
+    padding: 15px 0 25px;
+    text-align: justify;
+}
+
+.red-btn{
+    border: 1px solid #f44336;
+    background: transparent;
+    color: #f44336;
+}
+
+.red-btn:hover{
+    color: #fff;
+}
+
+/* ------- blog-content ------- */
+.blog-content{
+    width: 80%;
+    margin: auto;
+    padding: 60px 0;
+}
+
+.blog-left{
+    flex-basis: 65%;
+}
+
+.blog-left img{
+    width: 100%;
+}
+
+.blog-left h2{
+    color: #222;
+    font-weight: 600;
+    margin: 30px 0;
+}
+
+.blog-left p{
+    color: #999;
+    padding: 0;
+    text-align: justify;
+}
+
+.blog-right{
+    flex-basis: 32%;
+}
+
+.blog-right h3{
+    background: #f44336;
+    color: #fff;
+    padding: 7px 0;
+    font-size: 16px;
+    margin-bottom: 20px
+}
+
+.blog-right div{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    color: #555;
+    padding: 8px;
+    box-sizing: border-box;
+}
+
+.comment-box{
+    border: 1px solid #ccc;
+    margin: 50px 0;
+    padding: 10px 20px;
+}
+
+.comment-box h3{
+    text-align: left;
+}
+
+.comment-form input, .comment-form textarea{
+    width: 100%;
+    padding: 10px;
+    margin: 15px 0;
+    box-sizing: border-box;
+    border: none;
+    outline: none;
+    background: #f0f0f0;
+}
+
+.comment-box button{
+    margin: 10px 0;
+}
+
+/*---------Heder-----------*/
+.location{
+    width: 80%;
+    margin: auto;
+    padding: 80px 0;
+}
+
+.location iframe{
+    width: 100%;
+}
+
+.contact-us{
+    width: 80%;
+    margin: auto;
+}
+
+.contact-col div{
+    display: flex;
+    align-items: center;
+    margin-bottom: 40px;
+}
+
+.contact-col div .fa{
+    font-size: 28px;
+    color: #f44336;
+    margin: 10px;
+    margin-right: 30px;
+}
+
+.contact-col div p{
+    padding: 0;
+}
+
+.contact-col div h5{
+    font-size: 20px;
+    margin-bottom: 5px;
+    color: #555;
+    font-weight: 400;
+}
+
+.contact-col input, .contact-col textarea{
+    width: 100%;
+    padding: 15px;
+    margin-bottom: 17px;
+    box-sizing: border-box;
+    border: 1px solid #ccc;
+    outline: none;
+}
 @media(max-width: 700px){
     /*---------Heder-----------*/
     .text-box h1{
@@ -358,5 +530,9 @@ nav .fa{
     /* ----- call to action ----- */
     .cta h1{
         font-size: 20px;
+    }
+    /* -------- blog ---------- */
+    .sub-header h1{
+        font-size: 24px;
     }
 }
