--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -64,9 +64,16 @@
   height: 100%;
 }
 
-.nav-links:hover {
+.nav-links:hover, .nav-links:focus {
+  background: #f5f5f7;
+  color: #1D1D1F;
   border-bottom: 2px solid #f5f5f7;
-  transition: all 0.2s ease-out;
+  transition: all 0.3s ease-out;
+}
+
+.nav-links-active{
+  background: #f5f5f7;
+  color: #1D1D1F;
 }
 
 .fa-bars {
