--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -1,5 +1,5 @@
 .navbar {
-  background: linear-gradient(180deg, rgb(29, 29, 31) 0%, rgb(29, 29, 31) 100%);
+  background: linear-gradient(180deg, rgba(29, 29, 31, 0.7) 0%, rgba(29, 29, 31, 0.7) 100%);
   height: 48px;
   display: flex;
   justify-content: center;
@@ -19,14 +19,18 @@
 }
 
 .navbar-logo {
-  color: #f5f5f7;
+  background: #f5f5f7;
   justify-self: start;
   margin-left: 20px;
   cursor: pointer;
+  width: 44px;
   text-decoration: none;
   font-size: 2rem;
   display: flex;
   align-items: center;
+}
+.navbar-logo img {
+  width: 100%;
 }
 
 .navbar-logo .fas {
@@ -130,7 +134,8 @@
     position: absolute;
     top: 0;
     left: 0;
-    transform: translate(25%, 10%);
+    padding: 0;
+    transform: translate(25%, 5%);
   }
 
   .menu-icon {
