--- a/src/App.css
+++ b/src/App.css
@@ -5,3 +5,30 @@
   padding: 0;
   font-family: 'PT Sans', sans-serif;
 }
+
+.hero-btn{
+  display: inline-block;
+  text-decoration: none;
+  color: #fff;
+  border: 1px solid #fff;
+  padding: 12px 34px;
+  font-size: 13px;
+  background: transparent;
+  position: relative;
+  cursor: pointer
+}
+.hero-btn:hover{
+  border: ipx solid #f44336;
+  background: #f44336;
+  transition: 1S;
+}
+
+.red-btn{
+  border: 1px solid #f44336;
+  background: transparent;
+  color: #f44336;
+}
+
+.red-btn:hover{
+  color: #fff;
+}
